add footer to template

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
         <div class="left">
             <%= render 'shared/nav' %>
             <%= yield %>
+            <%= render 'shared/footer' %>
         </div>
         <div class="right">
             <div class="gallery">
