--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -258,7 +258,11 @@ p {
     }
 
     img {
-        height: 4.5rem;
+        height: 9rem;
+
+        @media (min-width: $desktop) {
+            height: 4.5rem;
+        }
     }
 }
 
@@ -274,7 +278,11 @@ p {
     grid-column: 2 / 12;
     text-align: center;
     align-self: center;
-    padding-top: 10rem;
+    padding-top: 6rem;
+
+    @media (min-width: $desktop){
+        padding-top: 10rem;
+    }
 }
 
 .features {
