remove redundant text

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,6 @@
 <div class="description">
     <header class="h1">Escape to the mountains from Boston</header>
-    <p>Trailhead Camp is a community lodge for Boston's outdoor adventure seekers. Catch our shuttle to the lodge from <span class="text-red font-weight-heavy">Alewife</span> and <span class="text-orange font-weight-heavy">Oak Grove</span> up to the lodge every Friday.</p>
+    <p>Trailhead Camp is a community lodge for Boston's outdoor adventure seekers. Catch our shuttle from <span class="text-red font-weight-heavy">Alewife</span> and <span class="text-orange font-weight-heavy">Oak Grove</span> up to the lodge every Friday.</p>
 </div>
 <div class="features carousel">
     <%= render "shared/features" %>
