--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
+    <meta name="description" content="Trailhead Camp is a community lodge for Boston's outdoor adventure seekers.">
+    <meta name="author" content="Robinson Greig">
+    <meta name="keywords" content="boston, camping, hiking, skiing, new england, white mountains, lodge, adventure, cambridge, somerville">
+
     <!-- Google Analytics -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
