--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="footer">
     <p class="text-align-center font-weight-heavy">Starting at $90/weekend.</p>
     <div class="card">
-        <form action="//thedesignproject.us8.list-manage.com/subscribe/post?u=c71ca50457562b465f19cc3b6&amp;id=0d291ca2e6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate email-capture" target="_blank" novalidate>
+        <form action="//thedesignproject.us8.list-manage.com/subscribe/post?u=c71ca50457562b465f19cc3b6&amp;id=0d291ca2e6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <div class="form-group">
                 <label for="email">Join the Winter 2018 Waitlist</label>
                 <div class="d-flex">
